include_directories(.)
add_subdirectory(building_configure)
add_subdirectory(configure_cmdline)
add_subdirectory(cdm_cmdline)
add_subdirectory(application/using_gtest)
add_subdirectory(application/using_sqlite)
set_target_properties(using_gtest PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
set_target_properties(using_sqlite PROPERTIES EXCLUDE_FROM_ALL 1 EXCLUDE_FROM_DEFAULT_BUILD 1)
