include_directories(.)
file(GLOB sources "*.cpp" "*.hpp" "../cdm/*.hpp")
file(GLOB_RECURSE headers "../modules/*.hpp")
file(GLOB_RECURSE applications "../application/**.hpp")

set(CDM_BOOST_ROOT_FOR_TESTING "" CACHE TYPE PATH)
if(CDM_BOOST_ROOT_FOR_TESTING)
	string(REGEX REPLACE "\\\\" "/" CDM_BOOST_ROOT_FOR_TESTING ${CDM_BOOST_ROOT_FOR_TESTING})
endif()
configure_file(boost_root.hpp.in boost_root.hpp ESCAPE_QUOTES @ONLY)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(allSources ${applications} ${sources} ${headers})
set(formatted ${formatted} ${allSources} PARENT_SCOPE)
add_executable(system_test ${allSources} ${CMAKE_CURRENT_BINARY_DIR}/boost_root.hpp)
target_link_libraries(system_test building_configure ${Boost_LIBRARIES})
