cmake_minimum_required(VERSION 2.8)
project(using_boost)
if(MSVC)
	set(Boost_USE_STATIC_LIBS ON) 
endif()
find_package(Boost REQUIRED filesystem system)
include_directories(${Boost_INCLUDE_DIR})
add_executable(using_boost using_boost.cpp cdm.hpp)
target_link_libraries(using_boost ${Boost_LIBRARIES})
if(UNIX)
	target_link_libraries(using_boost pthread)
endif()
set_target_properties(using_boost PROPERTIES FOLDER cdm)
