cmake_minimum_required(VERSION 2.8)
project(using_catch)
include_directories(${CATCH_INCLUDE_DIRS})
add_executable(using_catch using_catch.cpp cdm.hpp)
target_link_libraries(using_catch ${GTEST_LIBRARIES})
if(UNIX)
	target_link_libraries(using_catch pthread)
endif()
set_target_properties(using_catch PROPERTIES FOLDER cdm)
