cmake_minimum_required(VERSION 2.8)
project(using_libgit2)
set(LIBGIT2_INCLUDE_DIR "" CACHE TYPE PATH)
set(LIBGIT2_LIBRARY_DIR "" CACHE TYPE PATH)
if(UNIX)
	find_package(CURL REQUIRED)
	find_package(ZLIB REQUIRED)
	find_package(OpenSSL REQUIRED)
endif()
include_directories(${LIBGIT2_INCLUDE_DIR} ${CURL_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
link_directories(${LIBGIT2_LIBRARY_DIR})
add_executable(using_libgit2 using_libgit2.cpp cdm.hpp)
target_link_libraries(using_libgit2 git2)
if(UNIX)
	target_link_libraries(using_libgit2 pthread ${CURL_LIBRARIES} ${ZLIB_LIBRARIES} ${OPENSSL_LIBRARIES} rt)
endif()
if(WIN32)
	target_link_libraries(using_libgit2 Winhttp Rpcrt4 Crypt32)
endif()
