cmake_minimum_required(VERSION 2.8)
project(using_sdl2)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
add_executable(using_sdl2 using_sdl2.cpp cdm.hpp)
target_link_libraries(using_sdl2 ${SDL2_LIBRARY})
if(UNIX)
	target_link_libraries(using_sdl2 pthread rt)
endif()
