cmake_minimum_required(VERSION 2.8)
project(using_websocketpp)
if(MSVC)
	set(Boost_USE_STATIC_LIBS ON) 
endif()
find_package(Boost REQUIRED thread date_time chrono regex system)
include_directories(${WEBSOCKETPP_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
add_executable(using_websocketpp using_websocketpp.cpp cdm.hpp)
target_link_libraries(using_websocketpp ${Boost_LIBRARIES})
if(UNIX)
	target_link_libraries(using_websocketpp pthread)
endif()
set_target_properties(using_websocketpp PROPERTIES FOLDER cdm)
