cmake_minimum_required(VERSION 2.8)
project(using_cppnetlib_v2_configure)
if(UNIX)
  execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
  if(GCC_VERSION VERSION_GREATER 4.7)
    add_definitions(-std=c++1y)
  else()
    add_definitions(-std=c++0x)
  endif()
endif()
if(MSVC)
	set(Boost_USE_STATIC_LIBS ON)
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
	add_definitions(-D_WIN32_WINDOWS)
	add_definitions(-DBOOST_ASIO_HAS_IOCP)
endif()
find_package(Boost REQUIRED filesystem coroutine date_time program_options thread chrono context regex system)
include_directories(SYSTEM ${SILICIUM_INCLUDE_DIR} ${VENTURA_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${CDM_CONFIGURE_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIR})
add_executable(configure main.cpp)
target_link_libraries(configure ${Boost_LIBRARIES})
